syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "ActivityWatcherInfo.proto";
/*import "ArenaChallengeActivityDetailInfo.proto";
import "AsterActivityDetailInfo.proto";
import "BlessingActivityDetailInfo.proto";
import "BlitzRushActivityDetailInfo.proto";
import "BounceConjuringActivityDetailInfo.proto";
import "BuoyantCombatDetailInfo.proto";
import "ChannelerSlabActivityDetailInfo.proto";
import "ChessActivityDetailInfo.proto";
import "CrucibleActivityDetailInfo.proto";
import "DeliveryActivityDetailInfo.proto";
import "DigActivityDetailInfo.proto";
import "DragonSpineActivityDetailInfo.proto";
import "EchoShellDetailInfo.proto";
import "EffigyActivityDetailInfo.proto";
import "ExpeditionActivityDetailInfo.proto";
import "FindHilichurlDetailInfo.proto";
import "FleurFairActivityDetailInfo.proto";
import "FlightActivityDetailInfo.proto";
import "HideAndSeekActivityDetailInfo.proto";
import "LunaRiteDetailInfo.proto";
import "MistTrialActivityDetailInfo.proto";
import "MoonfinTrialActivityDetailInfo.proto";
import "MusicGameActivityDetailInfo.proto";
import "PlantFlowerActivityDetailInfo.proto";
import "RoguelikeDungeonActivityDetailInfo.proto";
import "SalesmanActivityDetailInfo.proto";
import "SeaLampActivityDetailInfo.proto";
import "SeaLampActivityInfo.proto";
import "SummerTimeDetailInfo.proto";
import "SumoActivityDetailInfo.proto";
import "TreasureMapActivityDetailInfo.proto";
import "TrialAvatarActivityDetailInfo.proto";
import "WaterSpiritActivityDetailInfo.proto";*/

message ActivityInfo {
	uint32 activity_id = 1;
	uint32 schedule_id = 2;
	uint32 begin_time = 3;
	uint32 end_time = 4;
	uint32 activity_type = 5;
	bool is_play_open_anim = 6;
	bool is_finished = 7;
	bool is_starting = 8;
	repeated ActivityWatcherInfo watcher_info_list = 9;
	repeated uint32 meet_cond_list = 10;
	repeated uint32 expire_cond_list = 15;
	uint32 selected_avatar_reward_id = 17;
	map<uint32, uint32> activity_coin_map = 18;
	uint32 score_limit = 19;
	uint32 cur_score = 20;
	repeated uint32 taken_reward_list = 24;
	bool is_hidden = 26;
	uint32 first_day_start_time = 27;
	//bool MIFCLBCMKJI = 28;
	//bool BPGCBIEDEDM = 29;
	//map<uint32, uint32> AGKPABKOHDA = 30;
	/*oneof detail {
		SeaLampActivityDetailInfo sam_lamp_info = 11;
		CrucibleActivityDetailInfo crucible_info = 12;
		SalesmanActivityDetailInfo salesman_info = 13;
		TrialAvatarActivityDetailInfo trial_avatar_info = 14;
		DeliveryActivityDetailInfo delivery_info = 16;
		AsterActivityDetailInfo aster_info = 21;
		FlightActivityDetailInfo flight_info = 25;
		DragonSpineActivityDetailInfo dragon_spine_info = 31;
		EffigyActivityDetailInfo effigy_info = 32;
		TreasureMapActivityDetailInfo treasure_map_info = 35;
		BlessingActivityDetailInfo blessing_info = 41;
		SeaLampActivityInfo sea_lamp_info = 42;
		ExpeditionActivityDetailInfo expedition_info = 43;
		ArenaChallengeActivityDetailInfo arena_challenge_info = 44;
		FleurFairActivityDetailInfo fleur_fair_info = 51;
		WaterSpiritActivityDetailInfo water_spirit_info = 52;
		ChannelerSlabActivityDetailInfo challneler_slab_info = 61;
		MistTrialActivityDetailInfo mist_trial_activity_info = 62;
		HideAndSeekActivityDetailInfo hide_and_seek_info = 63;
		FindHilichurlDetailInfo find_hilichurl_info = 64;
		SummerTimeDetailInfo summer_time_info = 65;
		BuoyantCombatDetailInfo buoyant_combat_info = 66;
		EchoShellDetailInfo echo_shell_info = 67;
		BounceConjuringActivityDetailInfo bounce_conjuring_info = 68;
		BlitzRushActivityDetailInfo blitz_rush_info = 69;
		ChessActivityDetailInfo chess_info = 70;
		SumoActivityDetailInfo sumo_info = 71;
		MoonfinTrialActivityDetailInfo moonfin_trial_info = 72;
		LunaRiteDetailInfo luna_rite_info = 73;
		PlantFlowerActivityDetailInfo plant_flower_info = 74;
		MusicGameActivityDetailInfo music_game_info = 75;
		RoguelikeDungeonActivityDetailInfo roguelike_dungoen_info = 76;
		DigActivityDetailInfo dig_info = 77;
		DOCNGBMKEID hachi_info = 78;
		DLHPBNNDGFI winter_camp_info = 79;
		IFACCKLEJCC potion_info = 80;
		PFMCPMIMGLM tanuki_travel_activity_info = 81;
		JEIAODKGIBD lantern_rite_activity_info = 82;
		EPDOGGKOCAP michiae_matsuri_info = 83;
		NHMFHLIGAKL bartender_info = 84;
		EAGKNMCLJDI ugc_info = 85;
		ADPBMLFDHJD crystal_link_info = 86;
		JACDNLEIDOO irodori_info = 87;
		EHDKFDJEEGP photo_info = 88;
		BEPFLAKHNHL spice_info = 89;
		MMNEJBFMAEA gacha_info = 90;
		JLMHDDHOGGD luminance_stone_challenge_info = 91;
		IGBMCJOPGIL rogue_diary_info = 92;
	}*/
}
